# CV_project

./: CV Project #7.ipynb  CV_Project_7.ipynb  README.md  cv-project-finale-kristoj.ipynb  cv-project-official-repo_kristoj.ipynb  pyproject.toml  test.py
denoised_img/: test.py
src/: CV-Project.ipynb
