[project]
name = "cv-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriele Onorato",email = "onorato.1979543@studenti.uniroma1.it"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
