[project]
name = "cv-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriele Onorato",email = "onorato.1979543@studenti.uniroma1.it"},
    {name = "Alberto Guida", email="guida.2008583@studenti.uniroma1.it"},
    {name = "Kristjan Jurij Tarantelli", email="tarantelli.2009153@studenti.uniroma1.it"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "wandb (>=0.19.11,<0.20.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "pytorch-msssim (>=1.0.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "einops (>=0.8.1,<0.9.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "lpips (>=0.1.4,<0.2.0)"
]

[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
